--- a/UnitOfWork/UnitOfWorkDemo/appsettings.json
+++ b/UnitOfWork/UnitOfWorkDemo/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP;Initial Catalog=UnitOfWorkDemoDB;User Id=sa;Password=database;"
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=UnitOfWorkDemoDB;User Id=sa; Integrated Security=true;"
   }
 }
