--- a/UnitOfWork/UnitOfWorkDemo.Services/UnitOfWorkDemo.Services.csproj
+++ b/UnitOfWork/UnitOfWorkDemo.Services/UnitOfWorkDemo.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UnitOfWorkDemo.Core\UnitOfWorkDemo.Core.csproj" />
+  </ItemGroup>
+
 </Project>
