--- a/UnitOfWork/UnitOfWorkDemo/appsettings.json
+++ b/UnitOfWork/UnitOfWorkDemo/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=UnitOfWorkDemoDB;User Id=sa; Integrated Security=true;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=UnitOfWorkDemo;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
