--- a/UnitOfWork/UnitOfWorkWithDotnet6/UnitOfWorkWithDotnet6.csproj
+++ b/UnitOfWork/UnitOfWorkWithDotnet6/UnitOfWorkWithDotnet6.csproj
@@ -7,11 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
