get employee data

--- a/UnitOfWork/UnitOfWorkWithDotnet6/appsettings.json
+++ b/UnitOfWork/UnitOfWorkWithDotnet6/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EFCoreDBConnection": ""
+    "EFCoreDBConnection": "Server=localhost\\SQLEXPRESS;Database=unitofWorkDemo;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate=True;Integrated Security=true"
   }
 }
